Changes to WS02 files

--- a/WS02_css/index.html
+++ b/WS02_css/index.html
@@ -2,10 +2,16 @@
 <html lang="fi">
     <head>
         <meta charset="UTF-8">
+        <style>
+            h2 {
+                color:rgb(7, 78, 7);
+            }
+        </style>
+        <link rel="stylesheet" href="./styles/styles.css">
         <title>Höpönaamari</title>
     </head>
     <body>
-        <h1>Iloinen höpönaamari</h1>
+        <h1 style="color: rgba(122, 19, 19, 0.825);"">Iloinen höpönaamari</h1>
         <p>Tässä on iloinen höpönaamari.</p>
         <p>Iloisella höpönaamarilla on punaiset korvat.</p>
         <img src="./images/images.jpeg" alt="Omituinen punakorvainen otus">
@@ -39,7 +45,7 @@
                 <td>Liian kova tuuli</td>
                 <td>Lätäkössä kelluminen</td>
             </tr>
-        </table>
+        </table><br><br>
         <form>
             <label for="name">Nimi:</label>
             <input type="text" id="name" name="name"><br><br>
