New changes to WS05

--- a/WS05_responsivedesign/index.html
+++ b/WS05_responsivedesign/index.html
@@ -7,6 +7,7 @@
         <title>Responsive Design</title>
     </head>
 <body>
+    <header>Meillä on muuten kaikenlaisia tolppia täällä</header><br>
     <div class="responsive-container">
         <div class="column">Tolppa</div>
         <div class="column">Kaikenlaisia tolppia</div>
@@ -29,6 +30,7 @@
             const navList = document.querySelector('.responsive-nav .nav-list');
             navList.classList.toggle('active');
         }
-    </script>
+    </script><br>
+    <footer>Kiitos huomiostanne</footer>
 </body>
 </html>
