--- a/WS07_project/ohjelmat.html
+++ b/WS07_project/ohjelmat.html
@@ -61,35 +61,30 @@
                         <div class="ratio ratio-16x9">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/fJerTUqWfdo?si=ltW1sLObp0UECZp9" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
+                        <div class="col text-end">
+                          <p><br>Pikku perunoissa tutustutaan eri musiikkityyleihin ja elämänkokemuksiin.</p>
+                        </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="ratio ratio-16x9">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/wwElNRGNs38?si=LY2AawCFXtxd12pi" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <div class="col text-center">
+                          <p><br>Erityisesti Fantti ja työkoneet ovat parasta katseltavaa raskaan päiväkotipäivän jälkeen.</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="ratio ratio-16x9">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/Tx6amKhrQDo?si=NSlFXiGfeh7wvj0c" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
+                        <div class="col text-start">
+                          <p><br>Muumilaakson tarinat tuskin tarvitsevat kummempaa esittelyä.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <br>
-        <div class="container">
-            <div class="row">
-              <div class="col text-end">
-                <p>Pikku perunoissa tutustutaan eri musiikkityyleihin ja elämänkokemuksiin.</p>
-              </div>
-              <div class="col text-center">
-                <p>Erityisesti Fantti ja työkoneet ovat parasta katseltavaa raskaan päiväkotipäivän jälkeen.</p>
-              </div>
-              <div class="col text-start">
-                <p>Muumilaakson tarinat tuskin tarvitsevat kummempaa esittelyä.</p>
-              </div>
-            </div>
-          </div>
-          <br>
           <div class="container">
             <div class="row">
                 <h4>Elokuvat</h4>
@@ -97,35 +92,32 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="ratio ratio-16x9">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/TbQm5doF_Uc?si=D4PCWLU0Re1IfsEW" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/TbQm5doF_Uc?si=D4PCWLU0Re1IfsEW" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        
+                          </div>
+                          <div class="col text-end">
+                            <p><br>Frozen on mahdollisesti saattanut kuulua myös äitinsä suosikkeihin jossain vaiheessa elämää.</p>
+                          </div>
                         </div>
                     <div class="col-sm-4">
                         <div class="ratio ratio-16x9">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/LKFuXETZUsI?si=e0_j1YYiWpC9hUdM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>
+                          </div>
+                          <div class="col text-center">
+                            <p><br>Mahdollisesti edelleen kuljetaan äidin mieltymysten parissa</p>
+                          </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="ratio ratio-16x9">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ycoY201RTRo?si=fuG2S3Qlx7DJgURm" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ycoY201RTRo?si=fuG2S3Qlx7DJgURm" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        
+                        </div>
+                        <div class="col text-start">
+                          <p><br>Saattaa olla että edelleen vaikutteita löytyy äidiltään, ken tietää.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <br>
-        <div class="container">
-            <div class="row">
-              <div class="col text-end">
-                <p>Frozen on mahdollisesti saattanut kuulua myös äitinsä suosikkeihin jossain vaiheessa elämää.</p>
-              </div>
-              <div class="col text-center">
-                <p>Mahdollisesti edelleen kuljetaan äidin mieltymysten parissa</p>
-              </div>
-              <div class="col text-start">
-                <p>Saattaa olla että edelleen vaikutteita löytyy äidiltään, ken tietää.</p>
-              </div>
-            </div>
-          </div>
-          <br>
     </main>
     <footer>&#9825; &#9825; &#9825;</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
